...

  <!-- ***************************
       Applicatio-specific strings
       *************************** -->
  <!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
  <string name="app_name">OI Safe</string>
  <string name="empty_safe">No Passwords present for this category.</string>
  <string name="empty_category">No categories present.  Please add one via Menu->Add</string>
  <string name="password_lock">Lock</string>
  <string name="password_view">View</string>
  <string name="password_edit">Edit</string>
  <string name="password_add">Add</string>
  <string name="password_delete">Delete</string>
  <string name="password">Password</string>
  <string name="passwords">Passwords</string>
  <string name="master_password">Master Password</string>
  <string name="username">Username</string>
  <string name="website">Website</string>
  <string name="description">Description</string>
  <string name="notes">Notes</string>
  <string name="save">Save</string>
  <string name="invalid_password">Invalid password.  Please try again.</string>
  <string name="notify_blank_pass">Password must be at least 4 characters</string>
  <string name="notify_blank_desc">Description cannot be blank</string>
  <string name="notify_blank_name">Name cannot be blank</string>
  <string name="first_time">Please enter a password below, which will be used to keep your passwords safe.</string>
  <string name="logoff_explanation">You are currently logged into OI Safe, meaning that other applications can request their passwords and decrypt/encrypt data. Lock to prevent further access until you type in your password again.</string>
  <string name="remote_ask">Another application is asking to use the master key. Please type in your password to unlock it.</string>
  <string name="categories">Categories</string>
  <string name="category">Category</string>
  <string name="category_business">Business</string>
  <string name="category_personal">Personal</string>
  <string name="name">Name</string>
  <string name="category_not_empty">Category is not empty.   You must delete the passwords first.</string>
  <string name="cannot_decrypt_category">Cannot decrypt category</string>
  <string name="cannot_decrypt_password">Cannot decrypt password</string>
  <string name="error_export">Error exporting database</string>
  <string name="export_database">Export Database</string>
  <string name="export_file_select">Select a file for export</string>
...
  <string name="import_file_select">Select a file for import</string>
  <string name="import_file_missing">Import file is missing:</string>
  <string name="import_file_error">Unable to import file \'oisafe.csv\' from SDCARD.  You might try disconnecting USB from computer.</string>
  <string name="import_error_first_line">First line is missing fields.</string>
  <string name="dialog_import_title">Import</string>
  <string name="dialog_import_msg">Do you want to replace the database (import from %s)?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="import_progress">Please wait while importing&#8230;</string>
  <string name="import_no_categories">No categories found.</string>
  <string name="import_no_entries">No entries found in CSV.</string>
  <string name="import_too_many_categories">Too many categories.</string>
  <string name="import_not_enough_fields">Not enough fields</string>
...
  <string name="intent_encrypt">Encrypt (OI Safe)</string>
  <string name="intent_get_password">Get password (OI Safe)</string>
  <string name="intent_set_password">Set password (OI Safe)</string>
  <string name="intent_restart_timer">Restart timer (OI Safe)</string>
  <string name="open_safe">Open OI Safe</string>
  <string name="lock">Lock</string>
  <string name="continue_text">Continue</string>
  <string name="generate_password">Generate Password</string>
  <string name="pass_gen_length">Password Length</string>
  <string name="pass_gen_uppercase">Uppercase [A&#8211;Z]</string>
  <string name="pass_gen_lowercase">Lowercase [a&#8211;z]</string>
  <string name="pass_gen_numbers">Numbers [0&#8211;9]</string>
  <string name="pass_gen_symbols">Symbols [!@#$%^\*]</string>
...
  <string name="package_access">Package access</string>
  <string name="not_found">not found</string>
  <string name="dialog_title_first_time_warning">New master key</string>
  <string name="dialog_summary_first_time_warning">A new random master key has been created. Use menu > backup and store this key in a safe place. Without this key you may lose encrypted data.</string>
  <string name="switch_mode">Switch mode</string>
  <string name="decrypt_progress">Decrypting&#8230;</string>
  <string name="search">Search</string>
  <string name="search_progress">Searching&#8230;</string>
  <string name="search_hint">Type search criteria</string>
  <string name="search_nothing_found">Nothing found</string>
  <string name="mute">Mute</string>
  <string name="sounds">Sounds</string>
  <string name="previous">Previous</string>
  <string name="next">Next</string>
  <string name="autobackup">AutoBackup</string>
...
