...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/master_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/pass_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:visibility="gone"/>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_text"/>

        <Button
            android:id="@+id/restore_button"
...
