<?xml version="1.0" encoding="UTF-8"?><!--
* $Id$
* 
* Copyright 2008 Randy McEoin
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name" />

    <EditText
      android:id="@+id/name"
      android:hint="@string/name"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:singleLine="true"
      android:layout_weight="1" />
  </LinearLayout>

  <Button
    android:id="@+id/save_category"
    android:text="@string/save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

</LinearLayout>
