...
      The similar strings app_name is added in the Application/template directory, but depending
      on the template directory makes it hard for the sample buildable with Android.mk.
      Thus defining the application_name with different name from the template.
    -->
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="purchase_done">Purchase successful</string>
...
